rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__assign_return.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests ::\nparse_program_ok(stringify! (assign_return), \"--a;\")"
---
[
    Stmt(
        ExprStmt(
            Unary(
                Unary {
                    op: Prefix(
                        MinusMinus,
                    ),
                    rhs: PlaceExpr(
                        Ident(
                            Ident(
                                "a",
                            ),
                        ),
                    ),
                },
            ),
        ),
    ),
]
