rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__assignment_in_arbitrary_expressions.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests :: parse_ok :: < Statement >\n(stringify! (assignment_in_arbitrary_expressions), \"(a = 1);\")"
---
a = 1;
