rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__attack_category.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests ::\nparse_program_ok(stringify! (attack_category),\n\"script_category(ACT_GATHER_INFO);\").into_iter().map(| stmt |\nstmt.to_string()).collect :: < Vec < _ >> ().join(\"\\n\")"
---
script_category(ACT_GATHER_INFO);
