rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__block_empty.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests ::\nparse_program_ok(stringify! (block_empty), \"{ }\")"
---
[
    Block(
        Block {
            stmts: [],
        },
    ),
]
