rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__continue_while.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests ::\nparse_program_ok(stringify! (continue_while),\n\"while (a) { b = 2; continue; }\")"
---
[
    While(
        While {
            condition: Atom(
                Ident(
                    Ident(
                        "a",
                    ),
                ),
            ),
            block: Block {
                items: [
                    Assignment(
                        Assignment {
                            lhs: PlaceExpr {
                                ident: Ident(
                                    "b",
                                ),
                                array_accesses: [],
                            },
                            op: Equal,
                            rhs: Atom(
                                Literal(
                                    Number(
                                        2,
                                    ),
                                ),
                            ),
                        },
                    ),
                    Continue,
                ],
            },
        },
    ),
]
